<resources>
    <string name="app_name">CollectiveNouns</string>
    <string name="action_settings">Settings</string>
    <string name="title_section1">Home</string>
    <string name="title_section2">Exercises</string>
    <string name="title_section3">About</string>
    <string name="peopleI">People I</string>
    <string name="peopleII">People II</string>
    <string name="peopleIII">People III</string>
    <string name="peopleIV">People IV</string>
    <string name="peopleV">People V</string>
    <string name="animalsI">Animals I</string>
    <string name="animalsII">Animals II</string>
    <string name="animalsIII">Animals III</string>
    <string name="animalsIV">Animals IV</string>
    <string name="animalsV">Animals V</string>
    <string name="animalsVI">Animals VI</string>
    <string name="animalsVII">Animals VII</string>
    <string name="animalsVIII">Animals VIII</string>
    <string name="animalsIX">Animals IX</string>
    <string name="objectsI">Objects I</string>
    <string name="objectsII">Objects II</string>
    <string name="objectsIII">Objects III</string>
    <string name="objectsIV">Objects IV</string>
    <string name="objectsV">Objects V</string>
    <string name="nationalitiesI">Nationalities I</string>
    <string name="test_desc">Select for Test mode</string>
    <string name="learn_desc">Select for Learn mode</string>
    <string name="people_desc">Collective nouns concerning groups of people</string>
    <string name="animals_desc">Collective nouns concerning groups of animals</string>
    <string name="objects_desc">Collective nouns concerning groups of objects</string>
    <string name="partition_desc">Visual partition</string>
    <string name="progress_desc">Visual progress cue</string>
    <string name="quit">Quit</string>
    <string name="test_out">Test Out</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="check">Check</string>
    <string name="learn">Learn</string>
    <string name="A">A</string>
    <string name="An">An</string>
    <string name="of">of</string>
    <string name="underscore">__________</string>
    <string name="questionGroupHint">Type the missing noun group</string>
    <string name="questionCollectiveHint">Type the missing collective noun</string>
    <string name="questionCollectiveHint2">Select the missing collective noun</string>
    <string name="questionGroupHint2">Select the missing noun group</string>
    <string name="logo_desc">Collective Nouns logo</string>
    <string name="correct">Correct!</string>
    <string name="incorrect">Not quite</string>
    <string name="exampleSentence">A faculty of academics</string>
    <string name="contin">Continue</string>
    <string name="test_complete">Test Complete!</string>
    <string name="score">Score:</string>
    <string name="best_score">Best Score:</string>
    <string name="example_score">10</string>
    <string name="out_of_15">/ 15</string>
    <string name="random_test">Random Test</string>
    <string name="achieved"><u>Achieved</u></string>
    <string name="platinum">Platinum</string>
    <string name="green">Green</string>
    <string name="amber">Amber</string>
    <string name="Total_Score">Total Score</string>
    <string name="group1">academics</string>
    <string name="group2">acrobats</string>
    <string name="group3">bakers</string>
    <string name="group4">barmen</string>
    <string name="group5">cardinals</string>
    <string name="group6">friends</string>
    <string name="group7">joggers</string>
    <string name="group8">knights</string>
    <string name="group9">lecturers</string>
    <string name="group10">mathematicians</string>
    <string name="group11">men</string>
    <string name="group12">mothers</string>
    <string name="group13">natives</string>
    <string name="group14">nuns</string>
    <string name="group15">police</string>
    <string name="group16">singers</string>
    <string name="group17">students</string>
    <string name="group18">tourists</string>
    <string name="group19">walkers</string>
    <string name="group20">wives</string>
    <string name="group21">writers</string>
    <string name="group22">thieves</string>
    <string name="group23">physicists</string>
    <string name="group24">heirs</string>
    <string name="group25">Irishmen</string>
    <string name="group26">judges</string>
    <string name="group27">ladies</string>
    <string name="group28">experts</string>
    <string name="group29">generals</string>
    <string name="group30">boy scouts</string>
    <string name="group31">athletes</string>
    <string name="group32">mourners</string>
    <string name="group33">models</string>
    <string name="group34">officers</string>
    <string name="group35">onlookers</string>
    <string name="group36">messengers</string>
    <string name="group37">listeners</string>
    <string name="group38">Italians</string>
    <string name="group39">impressionists</string>
    <string name="group40">Englishmen</string>
    <string name="group41">antelope</string>
    <string name="group42">crows</string>
    <string name="group43">monkeys</string>
    <string name="group44">mice</string>
    <string name="group45">porcupines</string>
    <string name="group46">tigers</string>
    <string name="group47">sheep</string>
    <string name="group48">whales</string>
    <string name="group49">rabbits</string>
    <string name="group50">oxen</string>
    <string name="group51">mules</string>
    <string name="group52">kangaroos</string>
    <string name="group53">hyenas</string>
    <string name="group54">gorillas</string>
    <string name="group55">dolphins</string>
    <string name="group56">cheetahs</string>
    <string name="group57">deer</string>
    <string name="group58">cattle</string>
    <string name="group59">baboons</string>
    <string name="group60">apes</string>
    <string name="group61">beavers</string>
    <string name="group62">buffalo</string>
    <string name="group63">coyotes</string>
    <string name="group64">badgers</string>
    <string name="group65">elephants</string>
    <string name="group66">camels</string>
    <string name="group67">ferrets</string>
    <string name="group68">hippopotamuses</string>
    <string name="group69">leopards</string>
    <string name="group70">otters</string>
    <string name="group71">rats</string>
    <string name="group72">stoats</string>
    <string name="group73">wolves</string>
    <string name="group74">wombats</string>
    <string name="group75">zebras</string>
    <string name="group76">squirrels</string>
    <string name="group77">rhinoceroses</string>
    <string name="group78">raccoons</string>
    <string name="group79">foxes</string>
    <string name="group80">bats</string>
    <string name="group81">asteroids</string>
    <string name="group82">arrows</string>
    <string name="group83">cigarettes</string>
    <string name="group84">coins</string>
    <string name="group85">eggs</string>
    <string name="group86">drinks</string>
    <string name="group87">ghosts</string>
    <string name="group88">hair</string>
    <string name="group89">grass</string>
    <string name="group90">gunships</string>
    <string name="group91">harps</string>
    <string name="group92">hills</string>
    <string name="group93">leaves</string>
    <string name="group94">maps</string>
    <string name="group95">mountains</string>
    <string name="group96">paper</string>
    <string name="group97">poems</string>
    <string name="group98">rubbish</string>
    <string name="group99">satellites</string>
    <string name="group100">tasks</string>
    <string name="group101">steps</string>
    <string name="group102">winnings</string>
    <string name="group103">umbrellas</string>
    <string name="group104">trumpets</string>
    <string name="group105">toys</string>
    <string name="group106">tomorrows</string>
    <string name="group107">wagers</string>
    <string name="group108">stars</string>
    <string name="group109">software</string>
    <string name="group110">similies</string>
    <string name="group111">ships</string>
    <string name="group112">tarts</string>
    <string name="group113">tests</string>
    <string name="group114">tools</string>
    <string name="group115">trucks</string>
    <string name="group116">dice</string>
    <string name="group117">clouds</string>
    <string name="group118">dictionaries</string>
    <string name="group119">flowers</string>
    <string name="group120">gods</string>
    <string name="group121">eagles</string>
    <string name="group122">caterpillars</string>
    <string name="group123">larks</string>
    <string name="group124">turtles</string>
    <string name="group125">snakes</string>
    <string name="group126">bees</string>
    <string name="group127">dragons</string>
    <string name="group128">goldfish</string>
    <string name="group129">cats</string>
    <string name="group130">seals</string>
    <string name="group131">lizards</string>
    <string name="group132">peacocks</string>
    <string name="group133">wasps</string>
    <string name="group134">penguins</string>
    <string name="group135">locusts</string>
    <string name="group136">parrots</string>
    <string name="group137">cobras</string>
    <string name="group138">rattlesnakes</string>
    <string name="group139">cranes</string>
    <string name="group140">boars</string>
    <string name="group141">owls</string>
    <string name="group142">ravens</string>
    <string name="group143">giraffes</string>
    <string name="group144">swans</string>
    <string name="group145">snails</string>
    <string name="group146">vultures</string>
    <string name="group147">chihuahuas</string>
    <string name="group148">elk</string>
    <string name="group149">herrings</string>
    <string name="group150">pheasants</string>
    <string name="group151">puffins</string>
    <string name="group152">unicorns</string>
    <string name="group153">Americans</string>
    <string name="group154">Irishmen</string>
    <string name="group155">Frenchmen</string>
    <string name="group156">Englishmen</string>
    <string name="group157">Scotsmen</string>
    <string name="group158">Sicilians</string>
    <string name="group159">Brazilians</string>
    <string name="group160">Spaniards</string>
    <string name="collective1">faculty</string>
    <string name="collective2">troupe</string>
    <string name="collective3">tabernacle</string>
    <string name="collective4">promise</string>
    <string name="collective5">college</string>
    <string name="collective6">party</string>
    <string name="collective7">wheeze</string>
    <string name="collective8">banner</string>
    <string name="collective9">drift</string>
    <string name="collective10">number</string>
    <string name="collective11">band</string>
    <string name="collective12">consternation</string>
    <string name="collective13">tribe</string>
    <string name="collective14">convent</string>
    <string name="collective15">posse</string>
    <string name="collective16">choir</string>
    <string name="collective17">class</string>
    <string name="collective18">flock</string>
    <string name="collective19">amble</string>
    <string name="collective20">impatience</string>
    <string name="collective21">worship</string>
    <string name="collective22">gang</string>
    <string name="collective23">nucleus</string>
    <string name="collective24">expectation</string>
    <string name="collective25">pint</string>
    <string name="collective26">bench</string>
    <string name="collective27">bevy</string>
    <string name="collective28">panel</string>
    <string name="collective29">glitter</string>
    <string name="collective30">troop</string>
    <string name="collective31">team</string>
    <string name="collective32">cortege</string>
    <string name="collective33">slouch</string>
    <string name="collective34">execution</string>
</resources>